--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -64,13 +64,11 @@ jobs:
       id-token: write
       pages: write
     steps:
-      - name: Download documentation artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: docs
+      - name: List artifacts directory
+        run: ls -la artifacts/
 
       - name: Unzip website
-        run: unzip artifacts/${{ steps.build.outputs.artifact }} -d site
+        run: unzip artifacts/webHelpADOC2-all.zip -d site
 
       - name: Enable GitHub Pages
         uses: actions/configure-pages@v4
