--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -1,4 +1,4 @@
-name: Build documentation
+name: Build and Deploy Documentation
 
 on:
   push:
@@ -21,6 +21,9 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: List project structure
+        run: ls -R
+
       - name: Define instance id and artifacts
         id: define-ids
         run: |
@@ -29,23 +32,23 @@ jobs:
           ARTIFACT="webHelp${INSTANCE_ID_UPPER}2-all.zip"
           ALGOLIA_ARTIFACT="algolia-indexes-${INSTANCE_ID_UPPER}.zip"
 
-          # Print the values
           echo "INSTANCE_ID_UPPER: $INSTANCE_ID_UPPER"
           echo "ARTIFACT: $ARTIFACT"
           echo "ALGOLIA_ARTIFACT: $ALGOLIA_ARTIFACT"
 
-          # Set the environment variables and outputs
           echo "INSTANCE_ID_UPPER=$INSTANCE_ID_UPPER" >> $GITHUB_ENV
           echo "ARTIFACT=$ARTIFACT" >> $GITHUB_ENV
           echo "ALGOLIA_ARTIFACT=$ALGOLIA_ARTIFACT" >> $GITHUB_ENV
           echo "artifact=$ARTIFACT" >> $GITHUB_OUTPUT
           echo "algolia_artifact=$ALGOLIA_ARTIFACT" >> $GITHUB_OUTPUT
 
-      - name: Build docs using Writerside Docker builder.
+      - name: Build docs using Writerside Docker builder
         uses: JetBrains/writerside-github-action@v4
         with:
           instance: ${{ env.INSTANCE }}
           docker-version: ${{ env.DOCKER_VERSION }}
+        env:
+          LOG_LEVEL: DEBUG  # 啟用詳細日誌
 
       - name: Save artifact with build results
         uses: actions/upload-artifact@v4
