--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -1,83 +1,120 @@
-name: Build and Deploy Documentation
+name: Build documentation
 
 on:
+  # If specified, the workflow will be triggered automatically once you push to the `main` branch.
+  # Replace `main` with your branch’s name
   push:
-    branches: ["main"]
+    branches: ["main","master"]
+  # Specify to run a workflow manually from the Actions tab on GitHub
   workflow_dispatch:
+
+# Gives the workflow permissions to clone the repo and create a page deployment
+permissions:
+  id-token: write
+  pages: write
+
+env:
+  # Name of module and id separated by a slash
+  INSTANCE: Writerside/adoc
+  # Replace HI with the ID of the instance in capital letters
+  ARTIFACT: webHelpADOC2-all.zip
+  # Writerside docker image version
+  DOCKER_VERSION: '243.21565'
+  # Add the variable below to upload Algolia indexes
+  # Replace HI with the ID of the instance in capital letters
+  ALGOLIA_ARTIFACT: 'algolia-indexes-ADOC.zip'
+  ALGOLIA_APP_NAME: '8VA5LCDZGD'
+  ALGOLIA_INDEX_NAME: 'Default'
+  ALGOLIA_KEY: '${{ secrets.ALGOLIA_KEY }}'
+  CONFIG_JSON_PRODUCT: 'writerside'
+  CONFIG_JSON_VERSION: 'master'
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      # 1. 取得程式庫
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-      # 2. 建置 Writerside 文件
       - name: Build docs using Writerside Docker builder
         uses: JetBrains/writerside-github-action@v4
         with:
-          # 如果 writerside.cfg 位於專案根目錄，可改為 '.'；若在子資料夾 Writerside/，就用 'Writerside'
-          location: Writerside
+          instance: ${{ env.INSTANCE }}
+          artifact: ${{ env.ARTIFACT }}
+          docker-version: ${{ env.DOCKER_VERSION }}
 
-          # 多數 Writerside 專案會在 writerside.cfg 的 <instance> 內使用 module="Writerside" product="adoc"
-          # 因此必須是 Writerside/adoc 而不是單純 adoc
-          instance: 'Writerside/adoc'
-
-          # 指定官方可用的 Docker Tag，例如 243.22562, latest, 等
-          docker-version: '243.22562'
-
-          # 輸出檔案名稱（可自訂）
-          artifact: 'webHelpADOC2-all.zip'
-
-        env:
-          # 啟用詳細輸出
-          LOG_LEVEL: DEBUG
-
-      # 3. 上傳產出的 ZIP (以及其他需要的檔案) 為 Artifact，以便後續使用
-      - name: Upload Writerside artifact
+      - name: Save artifact with build results
         uses: actions/upload-artifact@v4
         with:
           name: docs
           path: |
-            webHelpADOC2-all.zip
-            # 若還要上傳其他檔案或資料夾，也可一併列出
-
-  deploy:
-    # 表示本 Job 必須等待 build Job 完成
+            artifacts/${{ env.ARTIFACT }}
+            artifacts/report.json
+            artifacts/${{ env.ALGOLIA_ARTIFACT }}
+          retention-days: 7
+  # Add the job below and artifacts/report.json on Upload documentation step above if you want to fail the build when documentation contains errors
+  test:
+    # Requires build job results
     needs: build
     runs-on: ubuntu-latest
-    # 如要發布到 GitHub Pages，需要設定 Permissions
-    permissions:
-      id-token: write
-      pages: write
-
     steps:
-      # 1. 下載上一個 Job 上傳的 Artifact
-      - name: Download build artifacts
+      - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
           name: docs
           path: artifacts
 
-      # 2. 檢查剛下載的檔案
-      - name: List artifacts directory
-        run: ls -la artifacts/
+      - name: Test documentation
+        uses: JetBrains/writerside-checker-action@v1
+        with:
+          instance: ${{ env.INSTANCE }}
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    # Requires the build job results
+    needs: [build, test]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: docs
 
-      # 3. 解壓縮 Writerside 輸出 (webHelpADOC2-all.zip) 到 site/
-      - name: Unzip website
-        run: unzip artifacts/webHelpADOC2-all.zip -d site
+      - name: Unzip artifact
+        run: unzip -O UTF-8 -qq ${{ env.ARTIFACT }} -d dir
 
-      # 4. 啟用 GitHub Pages
-      - name: Enable GitHub Pages
+      - name: Setup Pages
         uses: actions/configure-pages@v4
 
-      # 5. 上傳「靜態網站」到 GitHub Pages Artifact
-      - name: Upload to GitHub Pages
+      - name: Package and upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: site
+          path: dir
 
-      # 6. 正式部署到 GitHub Pages
       - name: Deploy to GitHub Pages
+        id: deployment
         uses: actions/deploy-pages@v4
+  publish-indexes:
+    needs: [build, test, deploy]
+    runs-on: ubuntu-latest
+    container:
+      image: registry.jetbrains.team/p/writerside/builder/algolia-publisher:2.0.32-3
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: docs
+      - name: Unzip artifact
+        run: |
+          unzip -O UTF-8 -qq '${{ env.ALGOLIA_ARTIFACT }}' -d algolia-indexes
+          env algolia-key='${{env.ALGOLIA_KEY}}' java -jar /opt/builder/help-publication-agent.jar \
+          update-index \
+          --application-name '${{env.ALGOLIA_APP_NAME}}' \
+          --index-name '${{env.ALGOLIA_INDEX_NAME}}' \
+          --product '${{env.CONFIG_JSON_PRODUCT}}' \
+          --version '${{env.CONFIG_JSON_VERSION}}' \
+          --index-directory algolia-indexes/ \
+          2>&1 | tee algolia-update-index-log.txt
